--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,18 @@
     padding: 0;
 }
 
+ul {
+    list-style: none;
+}
+
 body {
     font-family: var(--font-primary);
 }
 
 .app-container {
     margin: 0 auto;
-    padding-top: 10rem;
-    width: 80%;
+    padding: 10rem 1.6rem;
+    width: 100%;
     min-width: 400px;
     max-width: 1800px;
 }
@@ -29,7 +33,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    width: 60%;
+    padding-bottom: 1.4rem;
+    width: 100%;
 }
 
 .search-name, .search-course, .search-author, .search-input-button {
@@ -58,4 +63,38 @@ body {
 .search-input-button {
     height: 40px;
     background-color: white;
+}
+
+.app-courses-container {
+    width: 100%;
+}
+
+.courses-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto;
+    width: auto;
+}
+
+.courses-list-item {
+    flex-grow: 100%;
+    flex-shrink: 100%;
+    flex-basis: 100%;
+}
+
+.course-card {
+    display: flex;
+    flex-direction: column;
+    margin: 1.4rem 1rem;
+    height: auto;
+    border: 1px solid gray;
+    border-radius: 8px;
+}
+
+.course-card-img {
+    width: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
